--- a/medium-drill.html
+++ b/medium-drill.html
@@ -7,7 +7,7 @@
 
 -->
 <head>
-<title>Igor's 3rd Grade Math test</title>
+<title>Math Drill</title>
 <style>
 .task{
                font-size:1.5em;
@@ -188,7 +188,7 @@ return parseInt(document.frm.sc[i].value);
 
 </head>
 <body>
-<h1>3rd Grade Math Test</h1>
+<h1>Math Drills</h1>
 <form name="frm">
 <input type="checkbox" name="operands" value="+" checked="checked">Addition
 &nbsp; &nbsp;
