--- a/secret.html
+++ b/secret.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Secret fro Codename</title>
+    <title>Secret for Codename Game</title>
     <link rel="stylesheet" type="text/css" href="codename.css">
     <script type="application/javascript">
         function drawSecret() {
