--- a/secret.html
+++ b/secret.html
@@ -23,7 +23,7 @@
                     htmlTable += "</tr>\n";
                 }
             }
-            htmlTable += "</table>";
+            htmlTable += "</table><div>" + Math.floor(Math.random() * 1000000) + "</div>";
             return htmlTable;
         }
 
